Fix mobile headline wrapping

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -373,6 +373,10 @@ $header-height: 80px;
 		margin-left: auto;
 	}
 
+	.header {
+		padding: 0 0px 0 10px;
+	}
+
 	.title {
 		display: none;
 	}
@@ -383,6 +387,10 @@ $header-height: 80px;
 		margin: 0;
 	}
 	.logo {
-		margin-right: 30px;
+		margin-right: 10px;
+		margin-left:0;
 	}
+	.nav-menu--language li.separator {
+	padding: 0 5px;
+}
 }
